# protocolo-ouroboros

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CHECKPOINT.md  CLAUDE.md  CONTEXTO.md  CONTRIBUTING.md  DADOS_FALTANTES.md  GAUNTLET_REPORT.md  GSD.md  GUIDE.md  LICENSE  Makefile  README.md  SECURITY.md  VALIDATOR_BRIEF.md  duvidas.md  install.sh  ouroboros.desktop  pyproject.toml  requirements-lock.txt  run.sh
.claude/: hooks.json  settings.json
.github/: PULL_REQUEST_TEMPLATE.md
.playwright-mcp/: page-2026-04-21T04-56-37-501Z.yml  page-2026-04-21T04-56-56-589Z.yml  page-2026-04-21T04-57-17-906Z.yml  page-2026-04-21T04-57-30-471Z.yml  page-2026-04-21T04-57-35-648Z.yml  page-2026-04-21T04-58-03-054Z.yml  page-2026-04-21T04-58-11-419Z.yml  page-2026-04-21T04-58-26-366Z.yml  page-2026-04-21T04-58-41-725Z.yml
.streamlit/: config.toml
contexto/: COMO_AGIR.md  ESTADO_ATUAL.md  PROTOCOLO_ANTI_ARMADILHA_V3_1.md
docs/: ARCHITECTURE.md  ARMADILHAS.md  ARQUITETURA_SYNC.md  AUDITORIA_2026-04-26.md  AUDITORIA_2026-04-28_externa.md  AUDITORIA_2026-04-29_self.md  AUDITORIA_DASHBOARD_DEVOPS_2026-04-29.md  AUDITORIA_SPRINTS.md  AUTOMACAO_BANCARIA.md  AUTOMACOES_OPUS.md  BLUEPRINT_VIDA_ADULTA.md  BOOTSTRAP.md  CICLO_GRADUACAO_OPERACIONAL.md  CONTEXT.md  DIARIO_MELHORIAS.md  GLOSSARIO.md  GOLDEN_TEST_CASES.md  GUIA_INGESTAO.md  HANDOFF_2026-04-23.md  HANDOFF_2026-04-23_conserta_tudo.md  HANDOFF_2026-04-24.md  HANDOFF_2026-04-24_rota_longa.md  HANDOFF_2026-04-27_cluster_UX.md  HANDOFF_2026-04-27_fase_nu_completa.md  HANDOFF_2026-04-28_automacoes_opus.md  HISTORICO_SESSOES.md  MANUAL_INBOX_WATCHER.md  MANUAL_WORKTREES.md  MODELOS.md  PADROES_CANONICOS.md  PLANO_FINANCEIRO_2026.md  PLANO_FINANCEIRO_ANDRE_VITORIA.md  PROMPT_AUTONOMO.md  PROMPT_EXECUCAO.md  PROMPT_NOVA_SESSAO.md  PROMPT_OPUS_SUPERVISOR_AUTONOMO.md  QUESTIONARIO_VIDA_2_COMPLETO.md  QUESTIONARIO_VIDA_COMPLETO.md  ROADMAP.md  RODAR_AUTONOMO.md  (+12 more)
hooks/: README.md  check_anonymity.py  check_citacao_filosofo.py  check_commit_author.sh  check_commit_msg.py  check_complexity.py  check_dados_financeiros.py  check_diff_anti_burla.py  check_emojis.py  check_file_size.py  check_logger_usage.sh  check_new_prints.py  check_path_consistency.py  check_silent_except.sh  pre_push_protect_main.sh  remove_coauthor.sh  sprint_auto_move.py
mappings/: areas_subtipos.yaml  categorias.yaml  categorias_item.yaml  categorias_tracking.yaml  contas_casal.yaml  cpfs_pessoas.yaml.example  dominio_categorias.yaml  fontes_renda.yaml  fornecedores_acentos.yaml  fornecedores_sinteticos.yaml  garantia_padroes.yaml  inbox_routing.yaml  irpf_regras.yaml  layouts_danfe.yaml  layouts_nfce.yaml  layouts_recibo.yaml  linking_config.yaml  medicamentos_dedutiveis.yaml  metas.yaml  ocr_cupom_regex.yaml  ocr_fallback_config.yaml  overrides.yaml  produtos_canonicos.yaml  razao_social_canonica.yaml  schema_exercicios.json  schema_memorias.json  schema_opus_ocr.json  seguradoras.yaml  tabelas_irpf.yaml  tipos_documento.yaml  tipos_documento_humanizado.yaml
mockups/: README.md  app.py  pagina_20_redesign.py  pagina_51_catalogacao.py  pagina_52_busca.py  pagina_53_grafo_obsidian.py  tema_mockup.py
novo-mockup/: README.md  index.html  styleguide.html
scripts/: __init__.py  _gerar_decisoes_opus_v2.py  _materializar_backlog_pure_swinging.py  audit_sprint_coverage.py  audit_vault_md.py  auditar_cobertura.py  auditar_cobertura_total.py  auditar_estado.py  auditar_extratores.py  auditar_grafo_orfaos.py  backfill_arquivo_origem_lote.py  backfill_concluida_em.py  backfill_metadata_pessoa.py  backfill_razao_social_canonica.py  check_acentuacao.py  check_anonimato.sh  check_anti_migue.sh  check_cobertura_total.py  check_concluida_em.py  check_gauntlet_freshness.py  check_spec.py  contar_inbox_pendentes.py  criar_spec.py  dedup_classificar_lote.py  dedup_nfce_grafo.py  detectar_tipos_novos.py  diagnosticar_linking.py  dossie_tipo.py  exportar_auditoria_cruzada.py  finish_sprint.sh  gc_propostas_linking.py  gerar_metricas_prontidao.py  gerar_skill_d7_log.py  inbox_watcher.sh  install_inbox_watcher.sh  investigar_dedup_c6_ofx_xlsx.py  limpar_data_output.py  limpar_revisao_orfaos.py  limpar_worktrees_agentes.sh  linking_nfe_transacao_massa.py  (+32 more)
src/: inbox_processor.py  pipeline.py
tests/: conftest.py  test_analise_redesign.py  test_anti_orfao.py  test_audit_vault_md.py  test_auditoria_fidelidade.py  test_backfill_arquivo_original.py  test_backfill_metadata_pessoa.py  test_backfill_razao_social_canonica.py  test_backup_grafo.py  test_be_diario_eventos.py  test_be_hoje_humor.py  test_be_resto.py  test_be_rotina.py  test_boleto_pdf.py  test_bridge_pix_endtoend.py  test_busca_catalogacao_redesign.py  test_busca_fixes_127.py  test_busca_global.py  test_busca_global_funcional.py  test_busca_inline.py  test_c6_cartao.py  test_c6_cc.py  test_canonicalizer.py  test_canonicalizer_variantes.py  test_capsula_md.py  test_catalogacao_humanizado.py  test_categorias_redesign.py  test_categorizar_salario_g4f.py  test_categorizer.py  test_categorizer_sugestoes_dashboard.py  test_check_spec.py  (+183 more)
(+1539 files in other folders)
